...
                            )
                        }
                    }
                }

                //shows a man if it is on the bowel cancer screen, woman if on the other cancer types
                val imageRes1 = if (cancerType == "Bowel Cancer") {
                    R.drawable.men3
                } else {
                    R.drawable.women3
                }

                //Shows the mail box image if on the bowel cancer screen - to show that you can post your bowel testing kit. And can tap on it to find out more information
                if (cancerType == "Bowel Cancer") {
                    Image(
                        painter = painterResource(id = R.drawable.mailbox),
                        contentDescription = "mailbox",
                        modifier = Modifier
                            .size(180.dp)
                            .align(Alignment.Center)
                            .offset(x = (-450).dp, y = 160.dp)
                            .clickable {
                                val intent = Intent(Intent.ACTION_VIEW, Uri.parse(whereToGetScreenedSubSection?.info?.get(4)))
                                context.startActivity(intent)
                            }
                    )
                }

                //Shows a doctor image (instead of mailbox) for cervical cancer, clicking on it takes you to more information on how to self-test
                if (cancerType == "Cervical Cancer") {
                    Image(
                        painter = painterResource(id = R.drawable.doctor),
                        contentDescription = "doctor",
                        modifier = Modifier
                            .size(470.dp)
                            .align(Alignment.Center)
                            .offset(x = (-450).dp, y = 170.dp)
                            .clickable {
                                val intent = Intent(Intent.ACTION_VIEW, Uri.parse(whereToGetScreenedSubSection?.info?.get(1)))
                                context.startActivity(intent)
                            }
                    )
                }

                //Shows a van/bus (instead of the above) for breast cancer, clicking on it shows more info for booking a mammogram
                if (cancerType == "Breast Cancer") {
                    Image(
                        painter = painterResource(id = R.drawable.van),
                        contentDescription = "van",
                        modifier = Modifier
                            .size(310.dp)
                            .align(Alignment.Center)
                            .offset(x = (-460).dp, y = 130.dp)
                            .clickable {
                                val intent = Intent(Intent.ACTION_VIEW, Uri.parse(whereToGetScreenedSubSection?.info?.get(2)))
...
                            .align(Alignment.Center)
                            .offset(x = 0.dp, y = 90.dp)
                    )
                } else {
                    Image(
                        painter = painterResource(id = R.drawable.hospital),
                        contentDescription = "hospital",
                        modifier = Modifier
                            .size(responsiveHospitalImage())
                            .align(Alignment.Center)
                            .offset(x = 0.dp, y = 70.dp)
                    )
                }
...

                    Box(modifier = Modifier.fillMaxSize()) {
                        if (fullSequence) {

                            if (cancerType != null) {
                            CustomButton(
                                text = "Next",
                                route = "${Screens.Quiz.route}/WhereToGetScreened/BarriersToGettingScreened",
                                navController = navController,
                                fullSequence = fullSequence,
                                cancerType = cancerType,
                                enabled = isButtonEnabled,
                                modifier = Modifier
...
