...


                    Row(
                        modifier = Modifier
                            .padding(start = start, top = 0.dp)
                            .align(Alignment.Start)
                            .semantics { testTag = "cancerHomepageTitle" }
                    ) {
                        Text(
                            text = cancerType,
                            fontSize = fontSize,
                            fontWeight = FontWeight.Bold,
                            textAlign = TextAlign.Left,
...
                                                contentDescription = "What Icon",
                                                tint = Color.Black,
                                                modifier = Modifier.size(48.dp)
                                            )

                                            Text(
                                                text = "What is screening?",
                                                fontWeight = FontWeight.ExtraBold,
                                                modifier = Modifier.padding(16.dp),
                                                textAlign = TextAlign.Center,
                                            )

                                        }
...
                                                contentDescription = "Where Icon",
                                                tint = Color.Black,
                                                modifier = Modifier.size(48.dp)
                                            )

                                            Text(
                                                text = "Where to get screened?",
                                                fontWeight = FontWeight.ExtraBold,
                                                modifier = Modifier.padding(16.dp),
                                                textAlign = TextAlign.Center,
                                            )

                                        }
...
                                        contentDescription = "Quiz Icon",
                                        tint = Color.Black,
                                        modifier = Modifier.size(48.dp)
                                    )
                                    Spacer(modifier = Modifier.width(10.dp))
                                    Text(
                                        text = "Or learn them all!",
                                        fontSize = 26.sp,
                                        textAlign = TextAlign.Center,
                                    )
                                }
                            }

...
