...
                        .fillMaxSize()
                        .padding(50.dp),
                    verticalArrangement = Arrangement.spacedBy(50.dp),
                    horizontalAlignment = Alignment.CenterHorizontally
                ) {
                    Text(
                        text = if (quizCorrect) "Correct!" else if (!quizCorrect) "Not quite!" else "blank",
                        fontSize = responsiveFontSize(),
                        fontWeight = FontWeight.Bold
                    )

                    Text(
                        text = quizResponse.toString(),
...
